force-app/main/default/objects/PBS_Savings_Account__c/PBS_Savings_Account__c.object-meta.xml
<CustomObject>
    <label>PBS Savings Account</label>
    <nameField>
        <label>Savings Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PBS Savings Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>