force-app/main/default/objects/PBS_Savings_Account__c/fields/Account_Draft_Data__c.field-meta.xml
<CustomField>
    <fullName>Account_Draft_Data__c</fullName>
    <label>Account Draft Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>