force-app/main/default/objects/PBS_Savings_Account__c/fields/Activated_Account_Date__c.field-meta.xml
<CustomField>
    <fullName>Activated_Account_Date__c</fullName>
    <label>Activated Account Date</label>
    <type>DateTime</type>
</CustomField>