force-app/main/default/objects/PBS_Savings_Account__c/fields/All_Customers_Numbers__c.field-meta.xml
<CustomField>
    <fullName>All_Customers_Numbers__c</fullName>
    <label>All Customers Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>