force-app/main/default/objects/PBS_Savings_Account__c/fields/Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Creation_Source__c</fullName>
    <label>Creation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First source</fullName>
            </value>
            <value>
                <fullName>Second source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>