force-app/main/default/objects/PBS_Savings_Account__c/fields/Customer_Joint_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Joint_Number__c</fullName>
    <label>Customer Joint Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>