force-app/main/default/objects/PBS_Savings_Account__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <label>Customer Number</label>
    <type>AutoNumber</type>
</CustomField>