force-app/main/default/objects/PBS_Savings_Account__c/fields/Draft_Hidden_From_Second_Customer__c.field-meta.xml
<CustomField>
    <fullName>Draft_Hidden_From_Second_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft Hidden From Second Customer</label>
    <type>Checkbox</type>
</CustomField>