force-app/main/default/objects/PBS_Savings_Account__c/fields/Highest_Step_So_Far__c.field-meta.xml
<CustomField>
    <fullName>Highest_Step_So_Far__c</fullName>
    <label>Highest Step So Far</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>