force-app/main/default/objects/PBS_Savings_Account__c/fields/Hold_Code__c.field-meta.xml
<CustomField>
    <fullName>Hold_Code__c</fullName>
    <label>Hold Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>