force-app/main/default/objects/PBS_Savings_Account__c/fields/Override_Bank_Wizard_Fail__c.field-meta.xml
<CustomField>
    <fullName>Override_Bank_Wizard_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Bank Wizard Fail</label>
    <type>Checkbox</type>
</CustomField>