force-app/main/default/objects/PBS_Savings_Account__c/fields/Override_Bank_Wizard_Fail_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Bank_Wizard_Fail_Reason__c</fullName>
    <label>Override Bank Wizard Fail Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>