force-app/main/default/objects/PBS_Savings_Account__c/fields/Override_Experian_Auth_Fail_Customer_1__c.field-meta.xml
<CustomField>
    <fullName>Override_Experian_Auth_Fail_Customer_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Experian Auth Fail Customer 1</label>
    <type>Checkbox</type>
</CustomField>