force-app/main/default/objects/PBS_Savings_Account__c/fields/Override_Experian_Auth_Fail_Customer_2__c.field-meta.xml
<CustomField>
    <fullName>Override_Experian_Auth_Fail_Customer_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Experian Auth Fail Customer 2</label>
    <type>Checkbox</type>
</CustomField>