force-app/main/default/objects/PBS_Savings_Account__c/fields/Override_Experian_PEPS_C1_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Experian_PEPS_C1_Reason__c</fullName>
    <label>Override Experian PEPS C1 Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>