force-app/main/default/objects/PBS_Savings_Account__c/fields/Override_UK_Tax_Resident_C1_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_UK_Tax_Resident_C1_Reason__c</fullName>
    <label>Override UK Tax Resident C1 Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>