force-app/main/default/objects/PBS_Savings_Account__c/fields/Override_UK_Tax_Resident_Customer_1__c.field-meta.xml
<CustomField>
    <fullName>Override_UK_Tax_Resident_Customer_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override UK Tax Resident Customer 1</label>
    <type>Checkbox</type>
</CustomField>