force-app/main/default/objects/PBS_Savings_Account__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <displayFormat>NR{0}</displayFormat>
    <label>Product Code</label>
    <type>AutoNumber</type>
</CustomField>