force-app/main/default/objects/PBS_Savings_Account__c/fields/Visited__c.field-meta.xml
<CustomField>
    <fullName>Visited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visited</label>
    <type>Checkbox</type>
</CustomField>